--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ db.sqlite3
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
-/static/
-/src/static/
+/collectstatic/
+/src/collectstatic/
 
 ### macOS ###
 *.DS_Store
