--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-Django==1.11.3
-pytz==2017.2
-django-bootstrap3==9.0.0
-mysqlclient==1.4.2.post1
-django-import-export==1.2.0
-tablib==0.12.1
-uWSGI==2.0.18
-boto3==1.13.25
-pycurl==7.43.0.5
+Django==4.1.3
+boto3==1.26.2
+dj-database-url==1.0.0
+django-bootstrap3==22.1
+django-import-django-import-export==3.0.1
+gunicorn==20.1.0
+psycopg2>=2.0,<3.0
+pycurl==7.45.1
+pytz==2022.6
+tablib==3.2.1
+whitenoise==6.2.0
