--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==4.1.3
 boto3==1.26.2
 dj-database-url==1.0.0
 django-bootstrap3==22.1
-django-import-django-import-export==3.0.1
+django-import-export==3.0.1
 gunicorn==20.1.0
 psycopg2>=2.0,<3.0
 pycurl==7.45.1
