--- a/app.json
+++ b/app.json
@@ -1,14 +1,13 @@
 {
   "name": "cementadmin",
   "description": "Aplicación web Django para administrar cementerios",
-  "image": "python:2.7",
+  "image": "heroku/python",
   "repository": "https://github.com/luisiturrios1/cementadmin",
   "keywords": ["python", "django" ],
   "addons": [ "heroku-postgresql" ],
   "env": {
     "SECRET_KEY": {
       "description": "The secret key for the Django application.",
-      "generator": "secret"
     }
   },
   "environments": {
