--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "addons": [ "heroku-postgresql" ],
   "env": {
     "SECRET_KEY": {
-      "description": "The secret key for the Django application.",
+      "description": "The secret key for the Django application",
     }
   },
   "environments": {
